hphp/hack/test/typecheck/expression_trees/nested_splicing.php.exp
File "nested_splicing.php", line 6, characters 16-19:
Splice syntax `${...}` cannot be nested. (Parsing[1002])
File "nested_splicing.php", line 6, characters 16-19:
Typing error (Typing[4110])
  File "nested_splicing.php", line 6, characters 16-19:
  Expected `Spliceable<_, _, _>` because this is being spliced into another Expression Tree
  File "nested_splicing.php", line 6, characters 18-18:
  But got `int`
